volumes/git-repo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: git-repo-service
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: https    
    port: 443
    targetPort: 80
  selector:
    app: git-backed-volume
